[tool.poetry]
name = "orisa"
version = "0.1.0"
description = ""
authors = ["Dennis Brakhane <brakhane@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
"html5lib" = "^1.0.1"
lxml = "^4.6.3"
sqlalchemy = ">=1.3.0"
sqlalchemy_aio = "^0.14.1"
trio = "^0.12.1"
fuzzywuzzy = {version = "^0.18.0", extras = ["speedup"]}
pyyaml = "^5.1.2"
discord-curious = {git = "https://github.com/brakhane/curious.git", rev = "orisa-triows"}
# discord-curious = {path="../curious"}
cachetools = "^3.1.1"
wcwidth = "^0.1.7"
tabulate = "^0.8.3"
pandas = "^1.1.5"
seaborn = "^0.11.2"
raven = "^6.10.0"
quart = "^0.10.0"
quart-trio = "^0.4.0"
hypercorn = "^0.7.2"
oauthlib = "^2.0.7"
itsdangerous = "^1.1.0"
"dataclasses-json" = "^0.3.1"
"asks" = "^2.3.5"
"wsproto" = ">=0.14.0"
prospector = "^1.1"
"openpyxl" = "^2.6.3"
h2 = ">=3.1.0"
arrow = "^1.2.1"
#unicodedata2 = "^13.0"
unicodedata2 = "^14.0.0"

aiofiles="^0.4.0"
anyio = "^1.3.1"
jinja2 = "^2.10.1"
markupsafe = "^1.1.1"

[tool.poetry.dev-dependencies]
"black" = { version = "*", allow-prereleases = true }
"Babel" = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
