[tool.poetry]
name = "orisa"
version = "0.1.0"
description = ""
authors = ["Dennis Brakhane <brakhane@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
"html5lib" = "^1.0.1"
lxml = "*"
sqlalchemy = ">=1.3.0"
sqlalchemy_aio = "*"
trio = "^0.12.1"
fuzzywuzzy = {version = "*", extras = ["speedup"]}
pyyaml = "*"
discord-curious = {git = "https://github.com/brakhane/curious.git", rev = "orisa-triows"}
# discord-curious = {path="../curious"}
cachetools = "*"
wcwidth = "*"
tabulate = "*"
pandas = "*"
seaborn = "*"
raven = "*"
quart = "*"
quart-trio = "*"
hypercorn = "^0.7.2"
oauthlib = "*"
itsdangerous = "*"
"dataclasses-json" = "*"
"asks" = "*"
"wsproto" = ">=0.14.0"
prospector = "^1.1"
"openpyxl" = "*"
h2 = ">=3.1.0"
arrow = "*"
#unicodedata2 = "^13.0"
unicodedata2 = "^14.0.0"

[tool.poetry.dev-dependencies]
"black" = { version = "*", allow-prereleases = true }
"Babel" = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
